fixed config and still workign on bootstrap
