# api/pb/api.pb.go
@@ -35,7 +35,7 @@ func (m *SimpleMessage) Reset()         { *m = SimpleMessage{} }
 func (m *SimpleMessage) String() string { return proto.CompactTextString(m) }
 func (*SimpleMessage) ProtoMessage()    {}
 func (*SimpleMessage) Descriptor() ([]byte, []int) {
-	return fileDescriptor_api_b5d0b901b161fce5, []int{0}
+	return fileDescriptor_api_01c318fd13097356, []int{0}
 }
 func (m *SimpleMessage) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_SimpleMessage.Unmarshal(m, b)
@@ -74,7 +74,7 @@ func (m *Protocol) Reset()         { *m = Protocol{} }
 func (m *Protocol) String() string { return proto.CompactTextString(m) }
 func (*Protocol) ProtoMessage()    {}
 func (*Protocol) Descriptor() ([]byte, []int) {
-	return fileDescriptor_api_b5d0b901b161fce5, []int{1}
+	return fileDescriptor_api_01c318fd13097356, []int{1}
 }
 func (m *Protocol) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_Protocol.Unmarshal(m, b)
@@ -119,7 +119,7 @@ func (m *PeerList) Reset()         { *m = PeerList{} }
 func (m *PeerList) String() string { return proto.CompactTextString(m) }
 func (*PeerList) ProtoMessage()    {}
 func (*PeerList) Descriptor() ([]byte, []int) {
-	return fileDescriptor_api_b5d0b901b161fce5, []int{2}
+	return fileDescriptor_api_01c318fd13097356, []int{2}
 }
 func (m *PeerList) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_PeerList.Unmarshal(m, b)
@@ -159,7 +159,7 @@ func (m *InMessage) Reset()         { *m = InMessage{} }
 func (m *InMessage) String() string { return proto.CompactTextString(m) }
 func (*InMessage) ProtoMessage()    {}
 func (*InMessage) Descriptor() ([]byte, []int) {
-	return fileDescriptor_api_b5d0b901b161fce5, []int{3}
+	return fileDescriptor_api_01c318fd13097356, []int{3}
 }
 func (m *InMessage) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_InMessage.Unmarshal(m, b)
@@ -200,11 +200,58 @@ func (m *InMessage) GetPayload() []byte {
 	return nil
 }
 
+type BroadcastMessage struct {
+	ProtocolName         string   `protobuf:"bytes,1,opt,name=protocolName,proto3" json:"protocolName,omitempty"`
+	Payload              []byte   `protobuf:"bytes,2,opt,name=payload,proto3" json:"payload,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *BroadcastMessage) Reset()         { *m = BroadcastMessage{} }
+func (m *BroadcastMessage) String() string { return proto.CompactTextString(m) }
+func (*BroadcastMessage) ProtoMessage()    {}
+func (*BroadcastMessage) Descriptor() ([]byte, []int) {
+	return fileDescriptor_api_01c318fd13097356, []int{4}
+}
+func (m *BroadcastMessage) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_BroadcastMessage.Unmarshal(m, b)
+}
+func (m *BroadcastMessage) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_BroadcastMessage.Marshal(b, m, deterministic)
+}
+func (dst *BroadcastMessage) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_BroadcastMessage.Merge(dst, src)
+}
+func (m *BroadcastMessage) XXX_Size() int {
+	return xxx_messageInfo_BroadcastMessage.Size(m)
+}
+func (m *BroadcastMessage) XXX_DiscardUnknown() {
+	xxx_messageInfo_BroadcastMessage.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_BroadcastMessage proto.InternalMessageInfo
+
+func (m *BroadcastMessage) GetProtocolName() string {
+	if m != nil {
+		return m.ProtocolName
+	}
+	return ""
+}
+
+func (m *BroadcastMessage) GetPayload() []byte {
+	if m != nil {
+		return m.Payload
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*SimpleMessage)(nil), "pb.SimpleMessage")
 	proto.RegisterType((*Protocol)(nil), "pb.Protocol")
 	proto.RegisterType((*PeerList)(nil), "pb.PeerList")
 	proto.RegisterType((*InMessage)(nil), "pb.InMessage")
+	proto.RegisterType((*BroadcastMessage)(nil), "pb.BroadcastMessage")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -222,7 +269,7 @@ type SpaceMeshServiceClient interface {
 	Echo(ctx context.Context, in *SimpleMessage, opts ...grpc.CallOption) (*SimpleMessage, error)
 	RegisterProtocol(ctx context.Context, in *Protocol, opts ...grpc.CallOption) (*SimpleMessage, error)
 	SendMessage(ctx context.Context, in *InMessage, opts ...grpc.CallOption) (*SimpleMessage, error)
-	Broadcast(ctx context.Context, in *InMessage, opts ...grpc.CallOption) (*SimpleMessage, error)
+	Broadcast(ctx context.Context, in *BroadcastMessage, opts ...grpc.CallOption) (*SimpleMessage, error)
 }
 
 type spaceMeshServiceClient struct {
@@ -260,7 +307,7 @@ func (c *spaceMeshServiceClient) SendMessage(ctx context.Context, in *InMessage,
 	return out, nil
 }
 
-func (c *spaceMeshServiceClient) Broadcast(ctx context.Context, in *InMessage, opts ...grpc.CallOption) (*SimpleMessage, error) {
+func (c *spaceMeshServiceClient) Broadcast(ctx context.Context, in *BroadcastMessage, opts ...grpc.CallOption) (*SimpleMessage, error) {
 	out := new(SimpleMessage)
 	err := c.cc.Invoke(ctx, "/pb.SpaceMeshService/Broadcast", in, out, opts...)
 	if err != nil {
@@ -274,7 +321,7 @@ type SpaceMeshServiceServer interface {
 	Echo(context.Context, *SimpleMessage) (*SimpleMessage, error)
 	RegisterProtocol(context.Context, *Protocol) (*SimpleMessage, error)
 	SendMessage(context.Context, *InMessage) (*SimpleMessage, error)
-	Broadcast(context.Context, *InMessage) (*SimpleMessage, error)
+	Broadcast(context.Context, *BroadcastMessage) (*SimpleMessage, error)
 }
 
 func RegisterSpaceMeshServiceServer(s *grpc.Server, srv SpaceMeshServiceServer) {
@@ -336,7 +383,7 @@ func _SpaceMeshService_SendMessage_Handler(srv interface{}, ctx context.Context,
 }
 
 func _SpaceMeshService_Broadcast_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(InMessage)
+	in := new(BroadcastMessage)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
@@ -348,7 +395,7 @@ func _SpaceMeshService_Broadcast_Handler(srv interface{}, ctx context.Context, d
 		FullMethod: "/pb.SpaceMeshService/Broadcast",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(SpaceMeshServiceServer).Broadcast(ctx, req.(*InMessage))
+		return srv.(SpaceMeshServiceServer).Broadcast(ctx, req.(*BroadcastMessage))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -378,32 +425,33 @@ var _SpaceMeshService_serviceDesc = grpc.ServiceDesc{
 	Metadata: "api.proto",
 }
 
-func init() { proto.RegisterFile("api.proto", fileDescriptor_api_b5d0b901b161fce5) }
+func init() { proto.RegisterFile("api.proto", fileDescriptor_api_01c318fd13097356) }
 
-var fileDescriptor_api_b5d0b901b161fce5 = []byte{
-	// 369 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x90, 0xcf, 0x6a, 0xdb, 0x40,
-	0x10, 0xc6, 0x91, 0xfc, 0xa7, 0xd2, 0x54, 0x02, 0x7b, 0xfb, 0x4f, 0xb8, 0x3d, 0x88, 0x85, 0x16,
-	0xe1, 0x83, 0x45, 0xdd, 0x9b, 0x8f, 0xc5, 0xa5, 0x08, 0x9c, 0x60, 0xa4, 0x27, 0x58, 0x49, 0x13,
-	0x59, 0x20, 0xef, 0x2e, 0x2b, 0xc5, 0x24, 0xd7, 0xbc, 0x42, 0xde, 0x26, 0xaf, 0x91, 0x57, 0xc8,
-	0x83, 0x84, 0x95, 0x25, 0x83, 0x89, 0x0f, 0xb9, 0xcd, 0x37, 0x33, 0xdf, 0x6f, 0x76, 0x3f, 0xb0,
-	0x99, 0x2c, 0x17, 0x52, 0x89, 0x46, 0x10, 0x53, 0xa6, 0xb3, 0x1f, 0x85, 0x10, 0x45, 0x85, 0x21,
-	0x93, 0x65, 0xc8, 0x38, 0x17, 0x0d, 0x6b, 0x4a, 0xc1, 0xeb, 0xe3, 0x06, 0xfd, 0x09, 0x6e, 0x52,
-	0xee, 0x65, 0x85, 0x57, 0x58, 0xd7, 0xac, 0x40, 0xf2, 0x19, 0x46, 0x07, 0x56, 0xdd, 0xa2, 0x67,
-	0xf8, 0x46, 0x60, 0xc7, 0x47, 0x41, 0x97, 0x60, 0x6d, 0xf5, 0x7e, 0x26, 0x2a, 0x42, 0x60, 0xc8,
-	0xd9, 0xbe, 0x5f, 0x68, 0x6b, 0xdd, 0x93, 0x42, 0x35, 0x9e, 0xe9, 0x1b, 0xc1, 0x28, 0x6e, 0x6b,
-	0xfa, 0x0b, 0xac, 0x2d, 0xa2, 0xda, 0x94, 0x75, 0x43, 0x66, 0x60, 0x49, 0x44, 0x15, 0xf1, 0x1b,
-	0xe1, 0x19, 0xfe, 0x20, 0xb0, 0xe3, 0x93, 0xa6, 0x0c, 0xec, 0x88, 0xf7, 0xe7, 0xbf, 0xc2, 0x98,
-	0x8b, 0x1c, 0xa3, 0x75, 0x87, 0xef, 0x14, 0xa1, 0xe0, 0xc8, 0xee, 0x01, 0xd7, 0xfa, 0xb8, 0xd9,
-	0x4e, 0xcf, 0x7a, 0xc4, 0x83, 0x0f, 0x92, 0xdd, 0x57, 0x82, 0xe5, 0xde, 0xc0, 0x37, 0x02, 0x27,
-	0xee, 0xe5, 0xf2, 0xc9, 0x84, 0x49, 0x22, 0x59, 0xa6, 0x7f, 0xb9, 0x4b, 0x50, 0x1d, 0xca, 0x0c,
-	0x49, 0x04, 0xc3, 0x7f, 0xd9, 0x4e, 0x90, 0xe9, 0x42, 0xa6, 0x8b, 0xb3, 0x10, 0x66, 0x6f, 0x5b,
-	0xf4, 0xfb, 0xc3, 0xf3, 0xcb, 0xa3, 0xf9, 0x85, 0x4e, 0xc2, 0xc3, 0xef, 0x10, 0xef, 0x98, 0x9e,
-	0x85, 0x98, 0xed, 0xc4, 0xca, 0x98, 0x93, 0x0d, 0x4c, 0x62, 0x2c, 0xca, 0xba, 0x41, 0x75, 0x8a,
-	0xc9, 0xd1, 0x8c, 0x5e, 0x5d, 0x22, 0x7e, 0x6b, 0x89, 0x53, 0xea, 0x68, 0xa2, 0xea, 0xec, 0x9a,
-	0xb6, 0x86, 0x8f, 0x09, 0xf2, 0xbc, 0x8f, 0xc4, 0xd5, 0xd6, 0x53, 0x42, 0x97, 0x48, 0x9f, 0x5a,
-	0x92, 0x4b, 0x2d, 0x4d, 0xaa, 0x91, 0xe7, 0x9a, 0xf2, 0x1f, 0xec, 0xbf, 0x4a, 0xb0, 0x3c, 0x63,
-	0x75, 0xf3, 0x0e, 0x86, 0xd7, 0x32, 0x08, 0x75, 0x35, 0x23, 0xed, 0x8d, 0x2b, 0x63, 0x9e, 0x8e,
-	0xdb, 0x90, 0xff, 0xbc, 0x06, 0x00, 0x00, 0xff, 0xff, 0x17, 0x96, 0xae, 0x4b, 0x58, 0x02, 0x00,
-	0x00,
+var fileDescriptor_api_01c318fd13097356 = []byte{
+	// 387 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x90, 0xcf, 0xae, 0x93, 0x40,
+	0x14, 0xc6, 0x33, 0xdc, 0x3f, 0xc2, 0x11, 0x12, 0xee, 0x78, 0x55, 0x52, 0x5d, 0x90, 0x49, 0x34,
+	0xa4, 0x8b, 0x12, 0xeb, 0xae, 0x4b, 0x53, 0x17, 0x24, 0xb5, 0x69, 0xe0, 0x09, 0x06, 0x38, 0x52,
+	0x12, 0x3a, 0x33, 0x19, 0xb0, 0xd1, 0xad, 0xaf, 0xe0, 0x13, 0xf9, 0x0c, 0xbe, 0x82, 0x0f, 0x62,
+	0x86, 0x02, 0x49, 0x6b, 0x73, 0x77, 0xe7, 0x3b, 0xe7, 0x7c, 0xbf, 0x33, 0xf3, 0x81, 0xc3, 0x55,
+	0xbd, 0x50, 0x5a, 0x76, 0x92, 0x5a, 0x2a, 0x9f, 0xbd, 0xad, 0xa4, 0xac, 0x1a, 0x8c, 0xb9, 0xaa,
+	0x63, 0x2e, 0x84, 0xec, 0x78, 0x57, 0x4b, 0xd1, 0x9e, 0x36, 0xd8, 0x3b, 0xf0, 0xb2, 0xfa, 0xa0,
+	0x1a, 0xfc, 0x82, 0x6d, 0xcb, 0x2b, 0xa4, 0x8f, 0x70, 0x77, 0xe4, 0xcd, 0x37, 0x0c, 0x48, 0x48,
+	0x22, 0x27, 0x3d, 0x09, 0xb6, 0x04, 0x7b, 0x67, 0xf6, 0x0b, 0xd9, 0x50, 0x0a, 0xb7, 0x82, 0x1f,
+	0xc6, 0x85, 0xbe, 0x36, 0x3d, 0x25, 0x75, 0x17, 0x58, 0x21, 0x89, 0xee, 0xd2, 0xbe, 0x66, 0xef,
+	0xc1, 0xde, 0x21, 0xea, 0x4d, 0xdd, 0x76, 0x74, 0x06, 0xb6, 0x42, 0xd4, 0x89, 0xf8, 0x2a, 0x03,
+	0x12, 0xde, 0x44, 0x4e, 0x3a, 0x69, 0xc6, 0xc1, 0x49, 0xc4, 0x78, 0xfe, 0x15, 0xdc, 0x0b, 0x59,
+	0x62, 0xb2, 0x1e, 0xf0, 0x83, 0xa2, 0x0c, 0x5c, 0x35, 0x3c, 0x60, 0x6b, 0x8e, 0x5b, 0xfd, 0xf4,
+	0xac, 0x47, 0x03, 0x78, 0xa6, 0xf8, 0x8f, 0x46, 0xf2, 0x32, 0xb8, 0x09, 0x49, 0xe4, 0xa6, 0xa3,
+	0x64, 0x3b, 0xf0, 0x3f, 0x69, 0xc9, 0xcb, 0x82, 0xb7, 0xdd, 0x78, 0xe9, 0x92, 0x48, 0x9e, 0x26,
+	0x5a, 0x67, 0xc4, 0xe5, 0x6f, 0x0b, 0xfc, 0x4c, 0xf1, 0xc2, 0xe4, 0xb6, 0xcf, 0x50, 0x1f, 0xeb,
+	0x02, 0x69, 0x02, 0xb7, 0x9f, 0x8b, 0xbd, 0xa4, 0x0f, 0x0b, 0x95, 0x2f, 0xce, 0x62, 0x9d, 0xfd,
+	0xdf, 0x62, 0x6f, 0x7e, 0xfe, 0xf9, 0xfb, 0xcb, 0x7a, 0xc9, 0xfc, 0xf8, 0xf8, 0x21, 0xc6, 0xef,
+	0xdc, 0xcc, 0x62, 0x2c, 0xf6, 0x72, 0x45, 0xe6, 0x74, 0x03, 0x7e, 0x8a, 0x55, 0xdd, 0x76, 0xa8,
+	0xa7, 0xe0, 0x5d, 0xc3, 0x18, 0xd5, 0x35, 0xe2, 0xeb, 0x9e, 0xf8, 0xc0, 0x5c, 0x43, 0xd4, 0x83,
+	0xdd, 0xd0, 0xd6, 0xf0, 0x3c, 0x43, 0x51, 0x8e, 0x5f, 0xf7, 0x8c, 0x75, 0xca, 0xfc, 0x1a, 0xe9,
+	0x45, 0x4f, 0xf2, 0x98, 0x6d, 0x48, 0x2d, 0x8a, 0xd2, 0x50, 0xb6, 0xe0, 0x4c, 0x29, 0xd2, 0x47,
+	0x63, 0xba, 0x0c, 0xf5, 0x1a, 0x2a, 0xe8, 0x51, 0x94, 0x79, 0x06, 0x95, 0x8f, 0x86, 0x15, 0x99,
+	0xe7, 0xf7, 0x7d, 0xd6, 0x1f, 0xff, 0x05, 0x00, 0x00, 0xff, 0xff, 0x55, 0x58, 0x1e, 0xa3, 0xb1,
+	0x02, 0x00, 0x00,
 }
